--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -5,5 +5,6 @@
 #
 
 
-F1            @Data-Team
-
+#For  Security Alerts
+1st.py         * @Bhanu/Front-end-team 
+/Src/Search/ombinar  @Bhanu/Freemakers
