--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -6,5 +6,5 @@
 
 
 #For  Security Alerts
-1st.py         * @Bhanu/Front-end-team 
+       * @Bhanu/Front-end-team 
 /Src/Search/ombinar  @Bhanu/Freemakers
